--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<h1><strong> <%= link_to "link a batman", "batman" %>
-<%= link_to "link a superman", "superman" %>
+<h1><strong> <%= link_to "ir a batman", pages_batman_path %>
+<%= link_to "ir a superman", pages_superman_path %>
 </strong>
 </h1>
+
+</div>
+
+
+
 <%= yield %>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
+	
