--- a/app/views/pages/superman.html.erb
+++ b/app/views/pages/superman.html.erb
@@ -11,3 +11,13 @@ $(document).on('turbolinks:load', function(){
 
 });
 </script>
+
+
+
+<form action="<%= pages_save_superman_path %>" method="POST">
+		<%= hidden_field_tag :authenticity_token,
+		form_authenticity_token %>
+			Nombre:<input name="nombre">
+			Email:<input name="email">
+			<input type="submit" value="enviar">
+		</form>
